--- a/src/restorent/css/Pesto.css
+++ b/src/restorent/css/Pesto.css
@@ -109,6 +109,7 @@
     padding: 20px;
     border-radius: 20px;
     background-color: rgb(247, 248, 248);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     
 }
 
@@ -126,7 +127,192 @@
     font-weight: 50;
 }
 
+.services-container #services .box a{
+    text-decoration: none;
+    color: black;
+}
 
+
+/* Services */
+
+/* Menu */
+
+.manu-banner{
+    display: flex;
+    flex-direction: column;
+    padding: 10px 15px;
+    height: 550PX;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.manu-banner::before{
+    content: "";
+    position: absolute;
+    background-position: center;
+    background-size: cover; 
+    background: url('../images/m16.jpeg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
+   
+    top:0px;
+    left:0px;
+    height: 70%;
+    width: 100%;
+    z-index: -1;
+    opacity: 0.8; 
+}
+.menu-section{
+    width: 100%;
+    margin-top: 10px;
+    background-color: white;
+}
+
+
+.menu-section .menu-card{
+    width: 80%;
+    margin: 10px auto;
+    display: flex;
+}
+
+.menu-section .menu-card .card{
+    background-color: rgb(247, 248, 248);
+    margin: 10px;
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.menu-section .menu-card .card .dish-image{
+    
+    padding: 15px;
+    border-radius: 15px;
+}
+
+.menu-section .menu-card .card .dish-image img{
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+}
+
+/* Product List */
+
+/* Cart */
+
+.cart{
+    width: 100%;
+    margin: 20px 10px;
+}
+
+.cart .row{
+    width: 60%;
+    margin: auto;
+    display: flex;
+    padding: 20px;
+    background-color: #e5e8ed;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.cart .row .card-list{
+    width: 70%;
+    
+}
+
+.cart .row .card-list .card-item{
+    display: flex;
+    /* background-color: rgb(247, 248, 248) ; */
+    border-bottom: 2px solid rgb(110, 175, 175) ;
+}
+
+.cart .row .card-list .card-item img{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    margin: 10px;
+    padding: 10px;
+}
+
+.cart .row .card-list .card-item .item-input{
+    width: 80px;
+    text-align: center;
+    border-radius: 15px;
+    height: 25px;
+}
+
+.cart .row .card-list .card-item .item-description, .card-item-add{
+    margin: auto 0px;
+    padding:10px 10px;
+    text-align: center;
+}
+
+.cart .row .card-list .card-item .item-description h5{
+    text-align: left;
+}
+.cart .row .card-list .card-item .card-item-add{
+    display:flex; 
+}
+
+.cart .row .card-list .card-item .card-item-add input, .card-item-add p, .card-item-add i{
+     margin-left: 80%;
+}
+.card-details{
+    width: 25%;
+    background-color:rgba(161,179,193,255);
+    margin: 0px auto;
+    border-radius: 10px;
+    text-align: left;
+    padding-left: 35px;
+}
+
+.card-details h3{
+    text-align: left;
+    margin: 10px;
+}
+
+.card-details .card{
+    margin-top: 30px;
+}
+
+.card .input-tag{
+    font-family: 'Bree Serif', serif; 
+    margin: 20px 0px;
+}
+
+.card .card-input{
+    margin: 5px 0px;
+    height: 25px;
+    width: 80%;
+    border-radius: 3px;
+}
+
+.card .date-input{
+    margin: 5px 0px;
+    height: 25px;
+    width: 60%;
+    border-radius: 3px;
+}
+
+.card .cvv-input{
+    margin: 5px 0px;
+    height: 25px;
+    width: 30%;
+    border-radius: 3px;
+}
+
+
+.card-total{
+    display: flex;
+    margin-left: 58%;
+}
+.card-total p{
+    display: flex;
+    margin-left: 10%;
+}
+/* Cart End */
+
+
+/* Menu End */
 
 /* Team Member  */
 
@@ -143,6 +329,7 @@
 .team-section .container .row{
     width:60%;
     margin: auto;
+    
 }
 
 .team-section .container .row .title{
@@ -165,7 +352,7 @@
 .team-section .container .team-card{
     width:100%;
     display:flex;
-    margin-top:50px;
+    margin-top:50px;  
 }
 
 .team-section .container .team-card .card{
@@ -179,6 +366,7 @@
     padding: 20px;
     margin: 0px 10px;
     cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }
  
  .team-section .container .team-card .card img{
@@ -359,11 +547,13 @@
     width: 100%;
     padding: 10px 0px;
     background-color: rgb(246, 248, 248);
+    
 }
 
 .about img{
     width:50%;
     height: auto;
+    
 }
 
 .about-text{
