--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -1,30 +1,27 @@
-.about{
+#home-portfolio{
     width: 100%;
-    display: flex ;
-    
+    display: flex ; 
 }
-.about .content{
+#home-portfolio .content{
     background-color: #21325e;
     width:70%;
     margin: 10px 0px;
     
 }
-
-.about .aboutme{
+#home-portfolio .aboutme{
     display: flex; 
 }
 
-.about .aboutme h1{
+#home-portfolio .aboutme h1{
     font-size: 50px;
     font-weight: 600px;
     color:  #e9d35b;
 }
-.about .aboutme .image{
+#home-portfolio .aboutme .image{
     margin:80px 30px;
 }
 
-
-.about .image img{
+#home-portfolio .image img{
     
     height: 200px;
     width: 200px;
@@ -32,43 +29,43 @@
     border: 5px solid red;
 }
 
-.about .aboutme .name{
+#home-portfolio .aboutme .name{
     color: white;
     margin: auto 0px;
 }
 
-.about .aboutme .name h1{
+#home-portfolio .aboutme .name h1{
     text-align: left;
 }
 
-.about .info{
+#home-portfolio .info{
     margin:auto;
     width: 40%;
     font-size: 35px;
     color: white;
 }
 
-.social-link{
+#home-portfolio .social-link{
     margin: 20px 0px;
     
 }
-.social-link a{
+#home-portfolio .social-link a{
     font-size: 50px;
     color: white;
     padding: 10px;
 }
 
 
-.skills{
+#home-portfolio .skills{
     width: 30%;
 }
-.skilllist{
+#home-portfolio .skilllist{
     margin: 30px 40px;
     padding-left:50px ;
     text-align: left;
     
 }
-.skilllist li{
+#home-portfolio .skilllist li{
     font-size: 20px;
     line-height: 40px;
     font-weight: 600;
@@ -79,40 +76,40 @@
 
 
 /* project */
-.projects{
+#projects{
     width: 100%;
     margin: 10px;
 }
 
-.projects .container{
+#projects .container{
     width: 80%;
     margin: auto;
     display: flex;
 }
 
-.projects .container a{
+#projects .container a{
     text-decoration: none;
 }
-.projects .container .cardlist{ 
+#projects .container .cardlist{ 
     margin: 20px auto;
     padding: 20px;
     border-radius: 15px;
 }
-.projects .container .cardlist .card{
+#projects .container .cardlist .card{
     margin: 20px auto;
 }
 
-.projects .container .cardlist .card img{
-    width: 400px;
+#projects .container .cardlist .card img{
+    width: 100%;
     border-radius: 15px;  
 }
 
-.card-info p{
+#projects .card-info p{
     color: #21325e;
     font-size: 20px;
 }
 
-.title h1{
+#projects .title h1{
     font-size: 35px;
     color: #21325e;
 }
