--- a/src/restorent/css/Pesto.css
+++ b/src/restorent/css/Pesto.css
@@ -197,6 +197,26 @@
     border-radius: 50%;
 }
 
+.menu-section .menu-card .card .btnPlus , .menu-section .menu-card .card .btnMinus{
+    height:25px;
+    width:25px;
+    border-radius: 5px;
+    margin: 0 10px;
+    margin: 0 10px;
+    font-size: 1.1rem;
+}
+.menu-section .menu-card .card .foodQuantity{
+    width:40px;
+    height:25px;
+    padding: 0 2px;
+    margin-top:10px;
+    font-size: 1.1rem;
+}
+
+
+
+
+
 /* Product List */
 
 /* Cart */
