--- a/src/bmicalculator/bmiCalculator.css
+++ b/src/bmicalculator/bmiCalculator.css
@@ -5,15 +5,16 @@
     width: 18%;
     margin: 50px auto;
     padding: 30px;
-    background-color: aqua;
+    
     border-radius: 15px;
-    text-align: left;
+    background-color: rgb(218, 235, 235);
     color: #21325e;
 }
 
 .card{
     margin: 0 auto;
-    padding: 0px 10px;
+    padding: 0px 0px;
+    width: 80%;
 }
 .container h1{
     color: #21325e;
@@ -24,6 +25,7 @@
     margin: 10px 0px;
     width: 200px;
     border-radius:5px ;
+    height:25px;
 }
 
 .container label{
@@ -32,7 +34,7 @@
 }
 
  .bmi .container button{
-    margin-left: 65px;
+    margin-left: 0;
     margin-bottom: 15px;
     height: 30px;
     width: 70px;
