--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -85,22 +85,29 @@
     width: 80%;
     margin: auto;
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 #projects .container a{
     text-decoration: none;
+    box-sizing: border-box;
+    width: calc(25% - 20px);
 }
 #projects .container .cardlist{ 
-    margin: 20px auto;
+    margin: 20px 0pc;
     padding: 20px;
     border-radius: 15px;
+   
 }
 #projects .container .cardlist .card{
     margin: 20px auto;
+    
 }
 
 #projects .container .cardlist .card img{
     width: 100%;
+    height: 128px;
     border-radius: 15px;  
 }
 
