--- a/src/restorent/css/restorent.css
+++ b/src/restorent/css/restorent.css
@@ -133,7 +133,7 @@
 }
 
 
-/* Services */
+/*End Services */
 
 /* Menu */
 
@@ -143,8 +143,7 @@
     padding: 10px 15px;
     height: 550PX;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center;  
 }
 
 .manu-banner::before{
@@ -213,11 +212,11 @@
     font-size: 1.1rem;
 }
 
+/* Menu End */
 
 
 
 
-/* Product List */
 
 /* Cart */
 
@@ -332,7 +331,13 @@
 /* Cart End */
 
 
-/* Menu End */
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+    
+  }
+
+
 
 /* Team Member  */
 
